<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Map Marker</string>
    <string name="settings">Settings</string>
    <string name="mark">Mark Current Location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="addpicture">Add Picture</string>
    <string name="fromcamera">From Camera</string>
    <string name="fromphone">From Phone</string>
    <string name="fish">Fish</string>
    <string name="comments">Comments</string>
    <string name="share">Share</string>
    <string name="sortby">Sort by</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    
    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add New Mark</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="lattitude">Lattitude</string>
    <string name="longitude">Longitude</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="toggle">Toggle View</string>
</resources>